1/1/17
 - checking if hit is new
 - passing hitbitset to hit constructor
 - added isThisANewTouchable function to check if a touchable already exists in the event

10/31/17
 - registering sensitive detector in GDetectorConstruction::ConstructSDandField() despite g4 documentation

10/19/17
 - added registerGVolumeTouchable to fill touchable map in gsensitivedetector
 - adding gTouchable constructor and registering in the sensitive detector map

10/18/17
 - removed timeWindow, now in parameters inside digitization plugin
 - added utility to retrieve gTouchable in sensitive detector
 - removed showing of constants every time sens. detector is initialized. Better doing it in grun for every run only.

10/16/17
 - using WORLDNAME defined in gsystem.h
 - using NOTAPPLICABLE defined in gvolume.h


10/9/17
 - passing the global map to GDetectorConstruction then to the local sensitive detectors
 - checking that we do not already have a GSensitiveDetector
 - better glog symbol and formatting
 - added threadLog option to select thread to listen to
 - registering SD dector to G4 SD Manager
 - picking the digitization from the global map
 - passing options to initGemcG4RunManager to use threadLog


10/6/17
 - removing sensitive map from GDetectorConstruction constructSD: this is thread local, let us not modify global pointer
 - added method getSensitiveVolumes() to retrieve the the sensitive names and their paths from gsetup, so the plugins can be loaded
 - gDigiLocal needs not be shared_ptr
 - changed log sign with ⌘, it looks cooler
 - added geant4 version
 - added utility function to load plugins
 - added LOG and ERR symbols

10/5/17
 - beamOn() is now part of grun, which also have a gDynamic map and will take care of plugin initialization for each run
 - GDynamic does not need to be a shared_ptr
 - added event action
 - both interactive and batch mode use GRuns:: processEvents() to activate beamOn()
 - using map of gDynamic pointers