@@ -3,7 +3,9 @@ Import('env')
 env.Prepend(LIBS = 'geventaction')
 
 sources = Split("""
-	gEventAction.cc
+    gEventAction.cc
+    utilities.cc
+    printEventStats.cc
 	""")
 
 env.Library(source = sources, target = "#lib/geventaction")
