@@ -4,20 +4,23 @@
 #include "G4EventManager.hh"
 
 
-GEventAction::GEventAction() : G4UserEventAction()
+GEventAction::GEventAction(GOptions* gopt) : G4UserEventAction()
 {
-	
+	verbosity = gopt->getInt("eventv");
 }
 
 GEventAction::~GEventAction()
 {}
 
-void GEventAction::BeginOfEventAction(const G4Event*)
+void GEventAction::BeginOfEventAction(const G4Event* event)
 {
+    printEventStatsBegin(event);
 }
 
 void GEventAction::EndOfEventAction(const G4Event* event)
 {
-//	G4EventManager::GetEventManager()->KeepTheCurrentEvent();
+    
+    printEventStatsEnd(event);
+
 }
 
