@@ -16,33 +16,33 @@ GRun::~GRun()
 }
 
 
-// RecordEvent is called at end of event.
-// For scoring purpose, the resultant quantity in a event,
-// is accumulated during a Run.
+// RecordEvent is called at end of event
 // Method to be overwritten by the user for recording events in this (thread-local) run.
-// This should be what EndOfEvent hit collections was doing?
+// The observables defined in each run should be filled here with the information from the hits
 void GRun::RecordEvent(const G4Event *aEvent)
 {
 	flowMessage("GRun:Local RecordEvent");
 
-	
-	numberOfEvent++;  // This is an original line.
+	// HitsCollections of This Event
+	G4HCofThisEvent* HCsThisEvent = aEvent->GetHCofThisEvent();
+	if (!HCsThisEvent) return;
 
-	// HitsCollection of This Event
-	G4HCofThisEvent* pHCE = aEvent->GetHCofThisEvent();
-	if (!pHCE) return;
+    G4cout << " Number of collections: " << HCsThisEvent->GetNumberOfCollections() << G4endl ;
+    
+    G4Run::RecordEvent(aEvent);
 
 
 }
 
 // This is global
-// Method to be overwritten by the user for merging local Run object to the global Run object.
+// Method to be overwritten by the user for merging local
+// Run objects to the global Run object.
 void GRun::Merge(const G4Run *aRun)
 {
 	flowMessage("GRun:Global Merge");
 
-//	const GRun *localRun = static_cast<const GRun *> (aRun);
+	const GRun *localRun = static_cast<const GRun *> (aRun);
 
 
-	G4Run::Merge(aRun);
+	G4Run::Merge(localRun);
 }
